v0.8 - Pending
	+ Allow user formatting of current playlist, library, and title
	+ Pref for song notification location
	+ Allow song notification for users without gnome-python-extras
	+ Pref to update MPD library on start
	+ --info, --status displays current song info or MPD status
	+ Pref to autoconnect on start, connect/disconnect buttons
	+ Fetch album art in background (non-blocking)
	+ Correctly retain previous library state when ending search
	+ Bug: Display path when filename is empty or http/ftp prefixes
	+ Bug: Fix crash if changing connection w/o gnome-python-extras
	+ Bug: Prevent --help, --toggle, etc. from happening twice if
	  dbus is installed
	+ Bug: Some shortcuts don't work with numslock enabled

v0.7.1 - September 27, 2006
	+ Bug: Fix crash if dbus is not installed
	+ Bug: Fix crash if song does not have some id3 info specified

v0.7 - September 27, 2006
	+ Ability to search library by type (can be disabled in prefs)
	+ Optional notification popup on song changes
	+ Show larger image on left-click of cover art
	+ Reduce (pygmy's) default polling time
	+ Retain selection of browsed directories in library
	+ Retain selection after drag-n-drop
	+ Keep width of tooltip fixed
	+ Show previous instance of app if user tries to open a second
	  instance [Mike Massonnet patch]
	+ Add --version, --help; print usage
	+ --toggle argument to minimize to tray or show (requires D-Bus)
	+ Add french translation [Floréal M]
	+ Additional shortcuts (see docs)
	+ Bug: repeat/shuffle isn't updated if mpd is restarted
	+ Bug: Unable to delete multiple playlists at once
	+ Bug: Crash when playing ogg streams [patch]

v0.6 - September 18, 2006
	+ Add support for playlists (save, load, queue, delete)
	+ Ability to use local image for album cover
	+ Support for multimedia keys
	+ Fetch cover art if an artist, but not album, is specified
	+ Add Ctrl-U and Ctrl-Shift-U for updating library (see docs)
	+ (Re-)display systray icon if tray is (re-)opened